--- a/gars_website/package.json
+++ b/gars_website/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^2.11.0",
+    "@react-pdf-viewer/default-layout": "^2.11.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "emailjs-com": "^3.2.0",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
+    "react-pdf": "^5.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "rxjs": "^7.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
