--- a/eco-wax/package.json
+++ b/eco-wax/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^2.11.0",
+    "@react-pdf-viewer/default-layout": "^2.11.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
