--- a/gars_website/package.json
+++ b/gars_website/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
+    "react-icons": "^4.3.1",
     "react-pdf": "^5.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
