--- a/gars_website/package.json
+++ b/gars_website/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gars_website",
   "version": "0.1.0",
+  "homepage": "htpps://gars.link/",
   "private": true,
   "dependencies": {
     "@react-pdf-viewer/core": "^2.11.0",
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -27,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
