--- a/gars_website/package.json
+++ b/gars_website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gars_website",
   "version": "0.1.0",
-  "homepage": "https://gars150387.github.io/gars_website/",
+  "homepage": "https://gars150387.github.io/gars_website/home/",
   "private": true,
   "dependencies": {
     "@react-pdf-viewer/core": "^2.11.0",
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d "
   },
   "eslintConfig": {
     "extends": [
